@@ -1,3 +1,10 @@
+2012-02-18  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fix, add new platform method wx impl.
+
+        * platform/wx/ContextMenuWx.cpp:
+        (ContextMenu::itemCount):
+
 2012-02-18  Sam Weinig  <sam@webkit.org>
 
         Fix part of the windows build failure.
